# STM8-RC-Dual-Motor-Driver

./: CMakeLists.txt  README.md
etc/: flash.in  opt-STM8S003Fx.ihx  opt-STM8S003xx.ihx
src/: config.h  main.c
