cmake_minimum_required(VERSION 3.12)
set(MCU "" CACHE STRING "Target MCU in 'STM8Sxxxxx' format, e.g. 'STM8S105K4'.")
string(TOUPPER ${MCU} MCU)
if(NOT MCU MATCHES "^((STM8S[0-9][0-9][0-9])[A-Z])[0-9]$")
	message(FATAL_ERROR "Unrecognized MCU '${MCU}'")
endif()
set(MCU1 ${CMAKE_MATCH_1}x)
set(MCU2 ${CMAKE_MATCH_2}xx)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_C_COMPILER sdcc)
set(CMAKE_C_FLAGS -mstm8)
set(CMAKE_C_FLAGS_DEBUG --debug)
find_program(STM8FLASH stm8flash)
project(rcmixer C)
add_compile_definitions(${MCU} ${MCU1} ${MCU2})
add_executable(main src/main.c)
add_custom_target(flash COMMAND ${CMAKE_BINARY_DIR}/flash)
configure_file(etc/flash.in flash @ONLY)
